<resources>
    <string name="app_name">DTrac CP</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account</string>
    <string name="Signup">Signup here!</string>
    <string name="title_activity_forgot_password_activty">ForgotPasswordActivty</string>
    <string name="forgot_password_desc">We will send you a link to reset your password.</string>
    <string name="title_activity_signup">SignupActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_dtrac">Welcome to DTrac</string>


</resources>
