<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wishadesign.app.dtrac.activity.LoginActivity"
    tools:showIn="@layout/activity_login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_back"
        android:scaleType="centerCrop"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/rounded_back"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="30dp"
            android:elevation="4dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="60dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pt_sans"
                    android:hint="@string/username_hint"
                    android:singleLine="true"
                    android:text=""/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/input_password"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:fontFamily="@font/pt_sans"
                    android:text=""/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/forgot_pass_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="#000"
                android:fontFamily="@font/pt_sans"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginTop="5dp"
                android:textAlignment="textEnd"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                android:textAlignment="center"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/pt_sans"/>

            <TextView
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Signup"
                android:textSize="16dp"
                android:textAlignment="center"
                android:textColor="#000"
                android:fontFamily="@font/pt_sans" />

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="48dp"
            android:layout_marginTop="@dimen/fab_margin"
            android:elevation="12dp"
            android:translationZ="10dp"
            app:srcCompat="@drawable/chevron_right" />

    </FrameLayout>

</android.support.constraint.ConstraintLayout>
